--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,8 @@
     "scrollmagic": "^2.0.8",
     "swiper": "^11.0.5",
     "tailwindcss-textshadow": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xss": "^1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
